sportdings/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sportdings-frontend
  namespace: sportdings
  labels:
    app: sportdings-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sportdings-frontend
  template:
    metadata:
      labels:
        app: sportdings-frontend
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: sportdings-frontend
        image: registry.flou.dev/sport-dings-frontend:3374b909-93e8-4f82-a929-897a235bcf96
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: sportdings-frontend-service
  namespace: sportdings
spec:
  selector:
    app: sportdings-frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
