sportdings/sportdings.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sportdings
  namespace: sportdings
  labels:
    app: sportdings
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sportdings
  template:
    metadata:
      labels:
        app: sportdings
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: sportdings-backend
        image: registry.flou.dev/sport-dings:a4a812e1-f2b9-4754-a535-ee6877882306
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: sportdings-service
  namespace: sportdings
spec:
  selector:
    app: sportdings
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
